# learn-gl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build_debug.ps1  build_release.ps1
include/: bitmap.hpp  camera.hpp  common_obj.hpp  examples.hpp  glwrap.hpp  mikktspace.hpp  model.hpp  skybox.hpp  utils.hpp
resources/models/survival_guitar_backpack/: survival_guitar_backpack.gltf
resources/simple_vertices/: common_box.jsonc  skybox.jsonc  wooden_box.jsonc
shaders/: asteroid_vs.glsl  bloom_blur_fs.glsl  bloom_final_fs.glsl  cascaded_shadow_blinn_phong_fs.glsl  cascaded_shadow_cast_gs.glsl  cascaded_shadow_map_debug_fs.glsl  default_fs.glsl  default_vs.glsl  g_buffer_fs.glsl  g_buffer_vs.glsl  g_debug_normal_fs.glsl  g_debug_position_fs.glsl  g_lighting_accumulate_fs.glsl  g_lighting_fs.glsl  hdr_exposure_fs.glsl  hdr_light_fs.glsl  hdr_light_vs.glsl  normal_map_fs.glsl  normal_map_vs.glsl  parallax_map_fs.glsl  parallax_map_vs.glsl  shadow_blinn_phong_fs.glsl  shadow_cast_vs.glsl  shadow_map_debug_fs.glsl  skybox_vs.glsl  straight_fs.glsl  straight_vs.glsl
shaders/base/: fbuffer_fs.glsl  fbuffer_fs_reinhard.glsl  quad_fs.glsl  shadow_map_debug_fs.glsl  skybox_fs.glsl  skybox_fs_leveled.glsl  skybox_vs.glsl
shaders/blinn-phong/: fs_template.glsl  vs_template.glsl
shaders/common/: box_fs.glsl  box_vs.glsl  sphere_vs.glsl  wooden_box_fs.glsl  wooden_box_vs.glsl
shaders/compute/: cubemap_mapping.glsl  env_diffuse.glsl  env_prefilter.glsl  env_split_sum.glsl
shaders/deferred/: g_buffer_fs.glsl  g_buffer_no_position_fs.glsl  g_buffer_no_position_vs.glsl  g_buffer_vs.glsl  g_debug_position_fs.glsl  g_debug_reconstruct_position_fs.glsl  g_lighting_accumulate_fs.glsl  g_lighting_fs.glsl  g_lighting_no_position_accumulate_fs.glsl  g_lighting_no_position_fs.glsl
shaders/geometry/: explode_fs.glsl  explode_gs.glsl  explode_vs.glsl
shaders/pbr/: ibl_color_fs.glsl  ibl_texture_fs.glsl  pre_env_vs.glsl  sphere_pbr_color_fs.glsl  sphere_pbr_color_vs.glsl  sphere_pbr_texture_fs.glsl  sphere_pbr_texture_vs.glsl
shaders/ssao/: g_plane_fs.glsl  g_plane_vs.glsl  ssao_blur_fs.glsl  ssao_final_fs.glsl  ssao_fs.glsl  ssao_lighting_fs.glsl
src/: bitmap.cpp  common_obj.cpp  glwrap.cpp  main.cpp  model.cpp  skybox.cpp  utils.cpp
src/examples/: asteroids.cpp  backpack.cpp  basic_pbr.cpp  bloom.cpp  cascaded_shadow_map.cpp  deferred.cpp  demo_sphere_pbr.cpp  direct_light_pbr.cpp  hdr_scene.cpp  ibl_pbr.cpp  nanosuit.cpp  nanosuit_explode.cpp  normal_map.cpp  parallax_map.cpp  shadow_map.cpp  ssao.cpp
